scrollbar fix size and positioning

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ html, body, div#root {
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
@@ -35,6 +36,7 @@ html, body, div#root {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  overflow: auto;
 }
 
 .Content {
