--- a/src/components/PokeInput/styles.module.scss
+++ b/src/components/PokeInput/styles.module.scss
@@ -87,7 +87,6 @@
     width: 100%;
     overflow-y: scroll;
     overflow-x: auto;
-    padding-right: 1px;
 }
 
 .suggested tr {
